--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -2,6 +2,6 @@
 current_version = 0.2.0
 
 [bumpversion:file:setup.py]
-
-[bumpversion:file:src/euiadapter.py]
-
+[bumpversion:file:src/euiadapter/__init__.py]
+[bumpversion:file:src/euiadapter/adapter.py]
+[bumpversion:file:src/euiadapter/enum.py]
