--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,9 +3,9 @@ current_version = 0.2.2
 
 [bumpversion:file:setup.py]
 
-[bumpversion:file:src/euiadapter/__init__.py]
+[bumpversion:file:netstruct/eui/__init__.py]
 
-[bumpversion:file:src/euiadapter/adapter.py]
+[bumpversion:file:netstruct/eui/adapter.py]
 
-[bumpversion:file:src/euiadapter/enum.py]
+[bumpversion:file:netstruct/eui/enum.py]
 
