--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,9 +3,6 @@ current_version = 0.2.4
 
 [bumpversion:file:setup.py]
 
-[bumpversion:file:netstruct/eui/__init__.py]
+[bumpversion:file:src/netstruct/__init__.py]
 
-[bumpversion:file:netstruct/eui/adapter.py]
-
-[bumpversion:file:netstruct/eui/enum.py]
-
+[bumpversion:file:src/netstruct/euiadapter.py]
